working from pc

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   font-family: "Colfax", Helvetica, sans-serif;
 }
 
+@import "~antd/dist/antd.css";
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
