--- a/src/components/Match/style.module.css
+++ b/src/components/Match/style.module.css
@@ -27,6 +27,7 @@
 .teamName {
   margin-left: 5px;
   margin-right: 5px;
+  color: #ffffff;
 }
 
 .center {
@@ -91,6 +92,10 @@
 .team1Picked2 {
   margin-right: 400px;
 }
-.team1Clicked {
-  transform: scale(0.2);
+
+.team1:hover {
+  outline: 1px solid gray;
+}
+.team2:hover {
+  outline: 1px solid gray;
 }
