--- a/src/pages/Authentication/style.module.css
+++ b/src/pages/Authentication/style.module.css
@@ -2,12 +2,44 @@
   background-color: #0f1519;
 }
 
-.frame {
-  width: 50%;
-  margin: auto;
-  margin-top: 25px;
+.page {
 }
 
-.step {
-  color: #ffffff !important;
+.main {
+  width: 40%;
+  margin: auto;
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: rgba(10, 15, 17, 0.698);
+  border-radius: 5%;
+}
+
+.input {
+  padding: 10px;
+  width: 13vw;
+  height: 30px;
+  font-size: 30px;
+  background: #efefe0;
+  border: 0;
+  border-radius: 12px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  margin-left: 10px;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  justify-content: space-between;
+  width: 60%;
+}
+
+label {
+  font-size: 1.5vw;
+  font-weight: bold;
 }
