--- a/src/components/Match/style.module.css
+++ b/src/components/Match/style.module.css
@@ -44,7 +44,7 @@
   align-items: center;
   /* margin: 10px; */
   margin: auto;
-  border-bottom: 0.5px solid #8fa3b0;
+  border-bottom: 0.5px solid #8fa3b05a;
   transition: all 0.25s ease-in-out;
   width: 90vw;
   user-select: none;
