--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -1,3 +1,7 @@
 .date {
-  margin-left: 15px;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-bottom: 0.5px solid #8fa3b095;
+  width: 90vw;
 }
